# tinyray

./: .gitignore  CMakeLists.txt  LICENSE  README.md  fray  makefile
include/core/: camera.h  canvas.h  colours.h  config.h  constants.h  coordinates.h  light_list.h  lights.h  ray.h  scene.h  shape_list.h  shapes.h  textures.h  tracing.h  vector.h
include/core/collections/: light_list.h  shape_list.h
include/core/shapes/: plane.h  sphere.h  triangle.h
include/tests/: test_camera.h  test_colours.h  test_config.h  test_coordinates.h  test_shapes.h  test_tracing.h  test_vector.h
include/tests/collections/: test_light_list.h
lib/: CMakeLists.txt
lib/grammar/: traylang.l  traylang.y
lib/include/: camera.h  canvas.h  colours.h  config.h  lights.h  ray.h  scene.h  shapes.h  textures.h  tracing.h  vector.h
lib/include/collections/: light_list.h  shape_list.h
lib/include/language/: ast-print.h  ast.h  interpreter.h  parser.h
lib/include/language/stdlib/: list.h  math.h  misc.h  scene.h  tracescene.h
lib/include/shapes/: plane.h  sphere.h  triangle.h
lib/src/: camera.c  canvas.c  config.c  lights.c  scene.c  shapes.c  tracing.c  vector.c
lib/src/collections/: lights_list.c  shape_list.c
lib/src/language/: ast-print.c  ast.c  interpreter.c
lib/src/language/stdlib/: list.c  math.c  misc.c  scene.c  tracescene.c
lib/src/shapes/: plane.c  sphere.c  triangle.c
main/: CMakeLists.txt
main/include/: img_export.h
main/include/langfuncs/: tracescene.h
main/src/: img_export.c  main.c  tracescene.c
main/src/langfuncs/: tracescene.c
scenes/: flat.tr  lambdatest.tr  lambert.tr  listtest.tr  math.tr  reflections.tr  simple.tr  stringtest.tr  test.tr
src/: main.c
src/core/: camera.c  canvas.c  colours.c  config.c  coordinates.c  lights.c  lights_list.c  ray.c  scene.c  shape_list.c  shapes.c  textures.c  tracing.c  vector.c
src/core/collections/: lights_list.c  shape_list.c
src/core/shapes/: plane.c  sphere.c  triangle.c
src/libs/: lodepng.c
src/tests/: test_all.c  test_camera.c  test_canvas.c  test_colours.c  test_config.c  test_coordinates.c  test_light_list.c  test_lights.c  test_scene.c  test_shape_list.c  test_shapes.c  test_tracing.c  test_vector.c
src/tests/collections/: test_light_list.c  test_shape_list.c
tests/: CMakeLists.txt
tests/include/: minunit.h  test_canvas.h  test_lights.h  test_scene.h
tests/include/collections/: test_shape_list.h
tests/src/: test_all.c  test_camera.c  test_canvas.c  test_colours.c  test_config.c  test_lights.c  test_scene.c  test_shapes.c  test_tracing.c  test_vector.c
tests/src/collections/: test_light_list.c  test_shape_list.c
tests/src/tracer/: test_colours.c
tests/src/tracer_tests/: test_config.c  test_lights.c  test_scene.c  test_shapes.c  test_tracing.c
tests/src/traylang/: test_datavalue.c  test_interpreter.c  test_object.c
tracer/: CMakeLists.txt
tracer/include/: camera.h  canvas.h  config.h  lights.h  ray.h  scene.h  shapes.h  tracing.h  vector.h
tracer/include/shapes/: plane.h  sphere.h  triangle.h
tracer/src/: camera.c  colours.c  lights.c  ray.c  scene.c  shapes.c  textures.c  tracing.c
tracer/src/shapes/: sphere.c  triangle.c
traylang/: CMakeLists.txt
traylang/grammar/: traylang.l  traylang.y
traylang/include/: ast-print.h  ast.h  datavalue.h  interpreter.h  interpreter_funcs.h  interpreter_gc.h  interpreter_stackframe.h  object.h  parser.h
traylang/include/stdlib/: list.h  math.h  misc.h  print.h
traylang/src/: ast-print.c  ast.c  datavalue.c  interpreter.c  interpreter_funcs.c  interpreter_gc.c  interpreter_stackframe.c  object.c
traylang/src/stdlib/: list.c  math.c  misc.c  print.c
